# AgentForge

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
backend/: README.md  __init__.py  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250101_0000_0001_initial_schema.py  20250102_0000_0002_api_keys_and_costs.py  20250222_0000_0003_pipeline_templates.py  20250223_0000_0004_pipeline_executions.py  20250225_0000_0005_user_llm_keys.py
backend/discussion/: __init__.py  critique_agent.py  design_generator.py  engine.py  intent_analyzer.py  memory.py  state_machine.py
backend/gateway/: __init__.py  auth.py  auth_rate_limiter.py  cost_tracker.py  main.py  rate_limiter.py  rbac.py  session_manager.py
backend/gateway/routes/: __init__.py  api_keys.py  auth.py  chat.py  conversations.py  llm_keys.py  metrics.py  pipeline.py  stats.py  templates.py
backend/pipeline/: __init__.py  extended_models.py  graph_builder.py  key_validator.py  llm_router.py  orchestrator.py  result.py  state.py  user_router_factory.py
backend/pipeline/agents/: __init__.py  analyzer.py  base.py  collector.py  custom.py  reporter.py  synthesizer.py  validator.py
backend/shared/: __init__.py  config.py  database.py  encryption.py  exception_handlers.py  metrics.py  middleware.py  models.py  schemas.py  security.py  security_headers.py
data-collector/: .dockerignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  schemas.py
data-collector/collectors/: api_fetcher.py  file_reader.py  web_crawler.py
data-collector/compliance/: pii_detector.py  rate_limiter.py  robots_checker.py
data-collector/processing/: anonymizer.py  chunker.py  cleaner.py
data-collector/tests/: __init__.py  conftest.py  test_api.py  test_collectors.py  test_compliance.py  test_processing.py
docker/: .env.example  Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.collector  Dockerfile.collector.prod  Dockerfile.frontend  Dockerfile.frontend.prod  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: getting-started.md  phase-02a-auth.md  (+13 more)
(+152 files in other folders)
