[project]
name = "agentforge-backend"
version = "0.1.0"
description = "AgentForge Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "websockets==12.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.0",
    "pydantic[email]==2.9.0",
    "pydantic-settings==2.5.0",
    "email-validator==2.1.1",
    "PyJWT[crypto]==2.9.0",
    "passlib[bcrypt]==1.7.4",
    "redis==5.1.0",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "openai==1.58.0",
    "anthropic==0.40.0",
    "tiktoken==0.8.0",
    "langgraph>=0.4.5",
    "langchain-core>=0.2.27,<0.3",
    "typing-extensions>=4.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
